--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ h3 {
     font-family: var(--ff-title);
     line-height: 0.8;
     letter-spacing: 1px;
-
 }
+
 
 h2 {
     font-size: 4rem;
@@ -172,6 +172,25 @@ nav a:focus {
 }
 
 /* buttons */
+.btn-group {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.btn {
+    padding: 0.75em 2.5em;
+    color: white;
+    text-decoration: none;
+    display: block;
+    margin: 0.5em 0;
+    border-radius: 0.35em;
+}
+
+
+.btn-primary {
+    background: var(--clr-primary);
+}
 
 /* homepage style*/
 
@@ -201,14 +220,37 @@ nav a:focus {
 }
 
 .about-us__body {
-    padding: 1.5em 1em  3em;
+    padding: 1.5em 1em 3em;
 }
 
+.order-online {
+    background: #f0f0f0;
+}
 
+.products {
+    display: flex;
+    flex-direction: column;
+}
 
+.product {
+    border-radius: 1em;
+    overflow: hidden;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+}
 
+.product__content {
+    padding: 1.5em;
+}
 
+.product__title {
+    color: var(--clr-primary);
+    font-size: 2.5em;
+    margin-bottom: 0.5em;;
+}
 
-
+.fine-print {
+    font-size: 0.75rem;
+    color: rgba(0, 0, 0, 0.85);
+}
 
 
